stacks/media/overseerr/overseerr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr-deployment
  labels:
    app: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
      - name: overseerr
        image: linuxserver/overseerr:latest
        ports:
        - containerPort: 5055
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
