stacks/media/overseerr/overseerr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  # namespace: default
spec:
  ports:
    - port: 5055
      protocol: TCP
      # targetPort: 80
  selector:
    app: overseerr
  type: ClusterIP
