stacks/media/overseerr/overseerr-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr
  namespace: default
spec:
  entryPoints:
    - websecure
    # - web
  routes:
    - match: Host(`overseerr.localhost`)
      kind: Rule
      middlewares:
        - name: headers-default
      services:
        - name: overseerr
          namespace: default
          port: 5055
